--- a/BullsEye/Base.lproj/Main.storyboard
+++ b/BullsEye/Base.lproj/Main.storyboard
@@ -64,6 +64,9 @@
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D2H-Uw-OWq">
                                 <frame key="frameInset" minX="513" minY="270" width="22" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <segue destination="mUj-ib-aRT" kind="presentation" id="7w0-TH-aoq"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="izl-St-hg5">
                                 <frame key="frameInset" minX="34" minY="270" width="71" height="30"/>
@@ -114,6 +117,53 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="137.32394366197184" y="106.875"/>
+        </scene>
+        <!--About View Controller-->
+        <scene sceneID="uQ4-Ro-Hzq">
+            <objects>
+                <viewController modalTransitionStyle="flipHorizontal" id="mUj-ib-aRT" customClass="AboutViewController" customModule="BullsEye" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="EMX-bG-JUh"/>
+                        <viewControllerLayoutGuide type="bottom" id="AaC-Vr-u6L"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="NrC-cv-bXi">
+                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yZk-8v-shV">
+                                <frame key="frameInset" minX="265" minY="270" width="39" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Close"/>
+                                <connections>
+                                    <action selector="close" destination="mUj-ib-aRT" eventType="touchUpInside" id="gyA-VQ-TwX"/>
+                                </connections>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="GfF-7Y-EVr">
+                                <frame key="frameInset" minX="20" minY="20" width="528" height="259"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <mutableString key="text">*** Bull's Eye ***  
+Welcome to the awesome game of Bull's Eye where you can compete with friends by winning points by dragging the slider to the correct number. 
+
+Your goal it to place the slider as close to as possible to the target number. The closer you are, the more points you score. You can even get bonus points! 
+
+Scoring:
+     Your number subtracted from the target number (max 100pts)
+
+     Bonus:
+         +100 for hitting it exactly
+         +50 for being within 5
+          -20 for being more than 20 away</mutableString>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kWO-JV-dQ5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="136.26760563380282" y="948.75"/>
         </scene>
     </scenes>
 </document>
