--- a/BullsEye/Base.lproj/Main.storyboard
+++ b/BullsEye/Base.lproj/Main.storyboard
@@ -119,15 +119,15 @@
             </objects>
             <point key="canvasLocation" x="137.32394366197184" y="106.875"/>
         </scene>
-        <!--About View Controller-->
+        <!--View Controller-->
         <scene sceneID="uQ4-Ro-Hzq">
             <objects>
-                <viewController modalTransitionStyle="flipHorizontal" id="mUj-ib-aRT" customClass="AboutViewController" customModule="BullsEye" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalTransitionStyle="flipHorizontal" id="mUj-ib-aRT" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="EMX-bG-JUh"/>
                         <viewControllerLayoutGuide type="bottom" id="AaC-Vr-u6L"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="NrC-cv-bXi">
+                    <view key="view" contentMode="scaleToFill" id="NrC-cv-bXi" customClass="About">
                         <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
